<resources>
    <!--DATOS GENERALES DE LA APP -->
    <string name="app_name">TP App</string>

    <!--DATOS PARA CONEXION CON API -->
    <string name="api_key">SjiPJ1xFBT87VPLTyuynlzUGfGsCGoHbw9b0To2z</string>
    <string name="base_url">https://api.api-ninjas.com</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="filtro_name">Filtro</string>
    <string name="deportivos_name">Deportivos</string>
    <string name="suv_name">SUV</string>
    <string name="electricos_name">ELÉCTRICOS</string>
    <string name="marcas_name">Marcas</string>
    <string name="search_content">Buscador de vehículos</string>
    <string name="bottom_home">Home</string>
    <string name="bottom_cars">Autos</string>
    <string name="bottom_search">Buscar</string>
    <string name="bottom_profile">Perfil</string>
    <!--CARDS AUTOS -->
    <string name="transmission_a">Automatic</string>
    <string name="transmission_m">Manual</string>
    <string name="fuel_gas">Gas</string>
    <string name="model_corolla">Toyota Corolla</string>

    <string name="txt_setting_generales">Generales</string>
    <string name="switch_modo_oscuro">Modo Oscuro</string>
    <string name="txt_notification">Notificaciones</string>
    <!--    Drawer-->
    <string name="navigation_drawer_open">Open</string>
    <string name="navigation_drawer_close">Close</string>
    <!--DATOS PARA CARGA DE TEXTO PARA PRUEBAS DE FRONT-->
    <string name="test">Test</string>
    <string name="test_count">+ 99</string>

    <string name="olvide_contrasenia">Olvide la contraseña</string>
    <string name="ingresar">INGRESAR</string>
    <string name="premier">Premier</string>
    <string name="rent_car">RentCar</string>

    <string name="txt_img_desc_fondologin">fondoLogin</string>
</resources>