<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.views.fragments.SettingFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/txtSettingGenerales"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:gravity="start|center"
            android:text="@string/txt_setting_generales"
            android:layout_marginStart="26dp"
            style="@style/NotificacionesYGenerales"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <Switch
                android:id="@+id/switch_dark_mode"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_marginStart="292dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/track"/>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="261dp"
                android:layout_height="24dp"
                android:text="@string/switch_modo_oscuro"
                style="@style/LettersProfileSetting"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="56dp">
            <Switch
                android:id="@+id/switch_notifications"
                android:layout_width="52dp"
                android:layout_height="32dp"
                android:layout_marginStart="292dp"
                android:layout_marginTop="12dp"
                android:layout_marginEnd="16dp"
                android:background="@drawable/track"/>

            <TextView
                android:id="@+id/textView3"
                android:layout_width="261dp"
                android:layout_height="24dp"
                android:text="@string/txt_notification"
                style="@style/LettersProfileSetting"
                android:layout_marginStart="26dp"
                android:layout_marginTop="16dp"
                android:layout_marginBottom="16dp"
                />
        </RelativeLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>